--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,33 @@
-bin/
+#
+# Standard Maven .gitignore
+#
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
 
-\.classpath
+#
+# IntelliJ
+#
+*.iml
+.idea/*
+!.idea/runConfigurations/
 
-\.project
+#
+# Visual Studio Code
+#
+.settings/
+.classpath
+.factorypath
+.project
+.vscode/
 
-\.settings/
 
-dist/
+.editorconfig
+.travis.yml
+.gitattributes
